--- a/index.html
+++ b/index.html
@@ -27,27 +27,27 @@
             <div class="mb-3 border border-1 rounded p-3">
                 <label for="" class="mb-3">Rate Issue </label><br>
                 <div class="form-check form-check-inline">
-                    <input class="form-check-input" type="radio" name="issue" id="inlineRadio1" value="option1">
+                    <input class="form-check-input" type="radio" name="issue" id="inlineRadio1" value="0">
                     <label class="form-check-label" for="inlineRadio1">0</label>
                 </div>
                 <div class="form-check form-check-inline">
-                    <input class="form-check-input" type="radio" name="issue" id="inlineRadio2" value="option2">
+                    <input class="form-check-input" type="radio" name="issue" id="inlineRadio2" value="1">
                     <label class="form-check-label" for="inlineRadio2">1</label>
                 </div>
                 <div class="form-check form-check-inline">
-                    <input class="form-check-input" type="radio" name="issue" id="inlineRadio1" value="option1">
+                    <input class="form-check-input" type="radio" name="issue" id="inlineRadio1" value="2">
                     <label class="form-check-label" for="inlineRadio1">2</label>
                 </div>
                 <div class="form-check form-check-inline">
-                    <input class="form-check-input" type="radio" name="issue" id="inlineRadio2" value="option2">
+                    <input class="form-check-input" type="radio" name="issue" id="inlineRadio2" value="3">
                     <label class="form-check-label" for="inlineRadio2">3</label>
                 </div>
                 <div class="form-check form-check-inline">
-                    <input class="form-check-input" type="radio" name="issue" id="inlineRadio1" value="option1">
+                    <input class="form-check-input" type="radio" name="issue" id="inlineRadio1" value="4">
                     <label class="form-check-label" for="inlineRadio1">4</label>
                 </div>
                 <div class="form-check form-check-inline">
-                    <input class="form-check-input" type="radio" name="issue" id="inlineRadio2" value="option2">
+                    <input class="form-check-input" type="radio" name="issue" id="inlineRadio2" value="5">
                     <label class="form-check-label" for="inlineRadio2">5</label>
                 </div>
             </div>
